# langgraph-data-analysis-agent

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENT_PRINCIPLES.md  DEVELOPMENT_INSTRUCTIONS.md  LGDA_MEMORANDUM.md  Makefile  README.md  SECURITY.md  SETUP_REQUIREMENTS.md  cli.py  demo_error_handling.py  demo_lgda_014.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/copilot/: instructions.md
.github/workflows/: actionlint.yml  auto-issues-from-pr.yml  auto-label.yml  ci.yml  codeql.yml  release-draft.yml
diagrams/: architecture.md
docs/: architecture-analysis-2025-01-20.md  implementation-plan-technical-debt.md  lang_graph_data_analysis_agent.md  lang_graph_data_analysis_agent_starter_repo_thelook_ecommerce.md  observability.md  plan.md
docs/ADR/: 001-language-and-stack.md  003-sql-security.md  004-llm-provider-fallback.md  006-schema-context.md  ADR-001-unified-retry-architecture.md  ADR-002-configuration-management.md
docs/ADR/SEED-ADR/: 000-index.md  002-graph-architecture.md  005-cli-and-tracing.md
docs/reviews/: PR25-unified-config-review.md  PR26-observability-review.md
docs/tasks/: tasks.md  tasks_detailed_tdd.md  tasks_en.md
scripts/: check_adr_compliance.py  scan_secrets.py  security_check.sh  validate_tasks.py
src/: bq.py  bq_errors.py  bq_metrics.py  config.py  llm.py
src/agent/: exceptions.py  graph.py  llm_integration.py  nodes.py  prompts.py  state.py
src/configuration/: __init__.py  unified.py
src/core/: __init__.py  migration.py  retry.py
src/error/: __init__.py  classification.py  core.py  recovery.py  timeout.py
src/llm/: __init__.py  compat.py  cost_tracker.py  manager.py  models.py  validator.py
src/llm/providers/: __init__.py  bedrock.py  gemini.py  nvidia_openai.py
src/observability/: __init__.py  business_metrics.py  health.py  instrumented_nodes.py  logging.py  manager.py  metrics.py  tracing.py
tasks/: LGDA-001-test-infrastructure.md  LGDA-002-sql-validation.md  LGDA-003-bigquery-client.md  LGDA-004-llm-integration.md  LGDA-005-configuration-management.md  LGDA-006-bq-client-hardening.md  LGDA-007-unified-retry-architecture.md  LGDA-008-configuration-management.md  LGDA-009-error-handling-recovery.md  LGDA-010-test-infrastructure-enhancement.md  LGDA-011-production-observability.md  LGDA-012-performance-optimization.md  LGDA-013-security-hardening.md  LGDA-014-no-fabrication-on-error.md  LGDA-015-retry-logic-sql-type-errors.md  LGDA-016-error-propagation-after-retries.md  LGDA-016-llm-429-handling-and-fallback.md  LGDA-017-bigquery-storage-handling.md  LGDA-018-latency-profiling-instrumentation.md  LGDA-019-unified-retry-e2e-fixes.md  PARALLEL-EXECUTION-PLAN.md
tests/: conftest.py  test_basic.py
tests/fixtures/: sample_configs.yaml  sample_dataframes.pkl  sample_responses.json  sample_schemas.json
tests/integration/: test_cli_interface.py  test_langgraph_flow.py  test_lgda_014_integration.py  test_lgda_015_retry_integration.py  test_unified_retry_e2e.py
tests/unit/: test_agent_state.py  test_bigquery_migration.py  test_bq_client.py  test_bq_hardening.py  test_config.py  test_langgraph_retry.py  test_lgda_014_no_fabrication.py  test_lgda_config.py  test_llm_client.py  test_retry_logic_validation_errors.py  test_unified_config.py  test_unified_retry.py
tests/utils/: mock_helpers.py  test_data_generators.py
(+24 files in other folders)
